parser.output
Regras inúteis no analisador por causa de conflitos

   28 stmt_array: ID '[' expr ':' expr ']' ASSIGN expr


Estado 8 conflitos: 1 de redução/redução
Estado 14 conflitos: 1 de redução/redução
Estado 42 conflitos: 2 de deslocamento/redução
Estado 44 conflitos: 1 de deslocamento/redução
Estado 65 conflitos: 2 de deslocamento/redução
Estado 136 conflitos: 1 de redução/redução
Estado 158 conflitos: 20 de redução/redução
Estado 161 conflitos: 1 de redução/redução
Estado 163 conflitos: 20 de redução/redução


Gramática

    0 $accept: program $end

    1 program: sub_programs

    2 sub_programs: sub_programs sub_program
    3             | sub_program

    4 sub_program: FUNCTION ID '(' param_list ')' ARROW TYPE block

    5 param_list: ε
    6           | param ',' param_list
    7           | param

    8 param: ID ':' TYPE
    9      | ID ':' TYPE dms
   10      | ε
   11      | ID ':' MATRIX

   12 block: '{' stmts_list '}'

   13 stmts_list: stmt ';'
   14           | stmt ';' stmts_list

   15 stmt: ID ASSIGN expr
   16     | ID ':' TYPE ASSIGN expr
   17     | ID ASSIGN '(' expr ')'
   18     | ID INCREMENT_ASSIGN expr
   19     | ID DECREMENT_ASSIGN expr
   20     | ID '[' expr ':' expr ']' ASSIGN expr
   21     | IF condition block
   22     | IF condition block ELSE block
   23     | WHILE condition block
   24     | FOR ID IN ID block
   25     | stmt_array
   26     | stmt_matrix
   27     | expr

   28 stmt_array: ID '[' expr ':' expr ']' ASSIGN expr
   29           | ID ':' TYPE dms ASSIGN expr
   30           | ID dms_acess ASSIGN expr

   31 stmt_matrix: ID ':' MATRIX ASSIGN expr
   32            | ID ':' MATRIX '[' expr ']' ASSIGN expr
   33            | ID matrix_twod ASSIGN expr
   34            | ID matrix_acess ASSIGN expr

   35 matrix_twod: '[' expr ']' '[' ']'
   36            | '[' ']' '[' expr ']'

   37 matrix_acess: '[' expr ']' '[' expr ']'
   38             | '[' expr ']' '[' expr ']' dms_acess

   39 dms_acess: '[' expr ']'
   40          | '[' expr ']' dms_acess

   41 dms: '[' ']'
   42    | '[' ']' dms

   43 condition: expr LESS expr
   44          | expr GREATER expr
   45          | expr LESSEQUALS expr
   46          | expr GREATEREQUALS expr
   47          | expr EQUALS expr
   48          | expr DIFF expr
   49          | NOT condition
   50          | condition AND condition
   51          | condition OR condition

   52 expr: expr PLUS term
   53     | expr MINUS term
   54     | term

   55 term: term MULT factor
   56     | term DIVISION factor
   57     | factor

   58 factor: exp EXPOENT factor
   59       | exp

   60 exp: '(' expr ')'
   61    | '-' expr
   62    | ID
   63    | NUMBER
   64    | FLOAT
   65    | STRING
   66    | ID dms_acess
   67    | ID '[' expr ':' expr ']'
   68    | ID '(' args ')'
   69    | '[' expr_list ']'
   70    | dms
   71    | ID INCREMENT
   72    | ID DECREMENT
   73    | ID matrix_twod
   74    | ID matrix_acess

   75 expr_list: expr
   76          | expr ',' expr_list

   77 args: ε
   78     | expr
   79     | expr ',' args


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 4 17 60 68
    ')' (41) 4 17 60 68
    ',' (44) 6 76 79
    '-' (45) 61
    ':' (58) 8 9 11 16 20 28 29 31 32 67
    ';' (59) 13 14
    '[' (91) 20 28 32 35 36 37 38 39 40 41 42 67 69
    ']' (93) 20 28 32 35 36 37 38 39 40 41 42 67 69
    '{' (123) 12
    '}' (125) 12
    error (256)
    ID <sValue> (258) 4 8 9 11 15 16 17 18 19 20 24 28 29 30 31 32 33 34 62 66 67 68 71 72 73 74
    NUMBER <sValue> (259) 63
    FLOAT <sValue> (260) 64
    STRING <sValue> (261) 65
    TYPE <sValue> (262) 4 8 9 16 29
    IF (263) 21 22
    ELSE (264) 22
    WHILE (265) 23
    FOR (266) 24
    IN (267) 24
    ARROW (268) 4
    ASSIGN (269) 15 16 17 20 28 29 30 31 32 33 34
    FUNCTION (270) 4
    PLUS (271) 52
    MINUS (272) 53
    MULT (273) 55
    DIVISION (274) 56
    EXPOENT (275) 58
    AND (276) 50
    OR (277) 51
    NOT (278) 49
    EQUALS (279) 47
    DIFF (280) 48
    LESS (281) 43
    GREATER (282) 44
    LESSEQUALS (283) 45
    GREATEREQUALS (284) 46
    INCREMENT (285) 71
    DECREMENT (286) 72
    INCREMENT_ASSIGN (287) 18
    DECREMENT_ASSIGN (288) 19
    MATRIX (289) 11 31 32


Não terminais com as regras onde eles aparecem

    $accept (45)
        à esquerda: 0
    program (46)
        à esquerda: 1
        à direita: 0
    sub_programs <sValue> (47)
        à esquerda: 2 3
        à direita: 1 2
    sub_program <sValue> (48)
        à esquerda: 4
        à direita: 2 3
    param_list <sValue> (49)
        à esquerda: 5 6 7
        à direita: 4 6
    param <sValue> (50)
        à esquerda: 8 9 10 11
        à direita: 6 7
    block <sValue> (51)
        à esquerda: 12
        à direita: 4 21 22 23 24
    stmts_list <sValue> (52)
        à esquerda: 13 14
        à direita: 12 14
    stmt <sValue> (53)
        à esquerda: 15 16 17 18 19 20 21 22 23 24 25 26 27
        à direita: 13 14
    stmt_array <sValue> (54)
        à esquerda: 28 29 30
        à direita: 25
    stmt_matrix <sValue> (55)
        à esquerda: 31 32 33 34
        à direita: 26
    matrix_twod <sValue> (56)
        à esquerda: 35 36
        à direita: 33 73
    matrix_acess <sValue> (57)
        à esquerda: 37 38
        à direita: 34 74
    dms_acess <sValue> (58)
        à esquerda: 39 40
        à direita: 30 38 40 66
    dms <sValue> (59)
        à esquerda: 41 42
        à direita: 9 29 42 70
    condition (60)
        à esquerda: 43 44 45 46 47 48 49 50 51
        à direita: 21 22 23 49 50 51
    expr <sValue> (61)
        à esquerda: 52 53 54
        à direita: 15 16 17 18 19 20 27 28 29 30 31 32 33 34 35 36 37 38 39 40 43 44 45 46 47 48 52 53 60 61 67 75 76 78 79
    term <sValue> (62)
        à esquerda: 55 56 57
        à direita: 52 53 54 55 56
    factor <sValue> (63)
        à esquerda: 58 59
        à direita: 55 56 57 58
    exp <sValue> (64)
        à esquerda: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
        à direita: 58 59
    expr_list <sValue> (65)
        à esquerda: 75 76
        à direita: 69 76
    args <sValue> (66)
        à esquerda: 77 78 79
        à direita: 68 79


Estado 0

    0 $accept: • program $end

    FUNCTION  deslocar, e ir ao estado 1

    program       ir ao estado 2
    sub_programs  ir ao estado 3
    sub_program   ir ao estado 4


Estado 1

    4 sub_program: FUNCTION • ID '(' param_list ')' ARROW TYPE block

    ID  deslocar, e ir ao estado 5


Estado 2

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 6


Estado 3

    1 program: sub_programs •
    2 sub_programs: sub_programs • sub_program

    FUNCTION  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 1 (program)

    sub_program  ir ao estado 7


Estado 4

    3 sub_programs: sub_program •

    $padrão  reduzir usando a regra 3 (sub_programs)


Estado 5

    4 sub_program: FUNCTION ID • '(' param_list ')' ARROW TYPE block

    '('  deslocar, e ir ao estado 8


Estado 6

    0 $accept: program $end •

    $padrão  aceitar


Estado 7

    2 sub_programs: sub_programs sub_program •

    $padrão  reduzir usando a regra 2 (sub_programs)


Estado 8

    4 sub_program: FUNCTION ID '(' • param_list ')' ARROW TYPE block

    ID  deslocar, e ir ao estado 9

    ')'      reduzir usando a regra 5 (param_list)
    ')'      [reduzir usando a regra 10 (param)]
    ','      reduzir usando a regra 10 (param)
    $padrão  reduzir usando a regra 5 (param_list)

    param_list  ir ao estado 10
    param       ir ao estado 11


Estado 9

    8 param: ID • ':' TYPE
    9      | ID • ':' TYPE dms
   11      | ID • ':' MATRIX

    ':'  deslocar, e ir ao estado 12


Estado 10

    4 sub_program: FUNCTION ID '(' param_list • ')' ARROW TYPE block

    ')'  deslocar, e ir ao estado 13


Estado 11

    6 param_list: param • ',' param_list
    7           | param •

    ','  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 7 (param_list)


Estado 12

    8 param: ID ':' • TYPE
    9      | ID ':' • TYPE dms
   11      | ID ':' • MATRIX

    TYPE    deslocar, e ir ao estado 15
    MATRIX  deslocar, e ir ao estado 16


Estado 13

    4 sub_program: FUNCTION ID '(' param_list ')' • ARROW TYPE block

    ARROW  deslocar, e ir ao estado 17


Estado 14

    6 param_list: param ',' • param_list

    ID  deslocar, e ir ao estado 9

    ')'      reduzir usando a regra 5 (param_list)
    ')'      [reduzir usando a regra 10 (param)]
    ','      reduzir usando a regra 10 (param)
    $padrão  reduzir usando a regra 5 (param_list)

    param_list  ir ao estado 18
    param       ir ao estado 11


Estado 15

    8 param: ID ':' TYPE •
    9      | ID ':' TYPE • dms

    '['  deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 8 (param)

    dms  ir ao estado 20


Estado 16

   11 param: ID ':' MATRIX •

    $padrão  reduzir usando a regra 11 (param)


Estado 17

    4 sub_program: FUNCTION ID '(' param_list ')' ARROW • TYPE block

    TYPE  deslocar, e ir ao estado 21


Estado 18

    6 param_list: param ',' param_list •

    $padrão  reduzir usando a regra 6 (param_list)


Estado 19

   41 dms: '[' • ']'
   42    | '[' • ']' dms

    ']'  deslocar, e ir ao estado 22


Estado 20

    9 param: ID ':' TYPE dms •

    $padrão  reduzir usando a regra 9 (param)


Estado 21

    4 sub_program: FUNCTION ID '(' param_list ')' ARROW TYPE • block

    '{'  deslocar, e ir ao estado 23

    block  ir ao estado 24


Estado 22

   41 dms: '[' ']' •
   42    | '[' ']' • dms

    '['  deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 41 (dms)

    dms  ir ao estado 25


Estado 23

   12 block: '{' • stmts_list '}'

    ID      deslocar, e ir ao estado 26
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    IF      deslocar, e ir ao estado 30
    WHILE   deslocar, e ir ao estado 31
    FOR     deslocar, e ir ao estado 32
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    stmts_list   ir ao estado 36
    stmt         ir ao estado 37
    stmt_array   ir ao estado 38
    stmt_matrix  ir ao estado 39
    dms          ir ao estado 40
    expr         ir ao estado 41
    term         ir ao estado 42
    factor       ir ao estado 43
    exp          ir ao estado 44


Estado 24

    4 sub_program: FUNCTION ID '(' param_list ')' ARROW TYPE block •

    $padrão  reduzir usando a regra 4 (sub_program)


Estado 25

   42 dms: '[' ']' dms •

    $padrão  reduzir usando a regra 42 (dms)


Estado 26

   15 stmt: ID • ASSIGN expr
   16     | ID • ':' TYPE ASSIGN expr
   17     | ID • ASSIGN '(' expr ')'
   18     | ID • INCREMENT_ASSIGN expr
   19     | ID • DECREMENT_ASSIGN expr
   20     | ID • '[' expr ':' expr ']' ASSIGN expr
   28 stmt_array: ID • '[' expr ':' expr ']' ASSIGN expr
   29           | ID • ':' TYPE dms ASSIGN expr
   30           | ID • dms_acess ASSIGN expr
   31 stmt_matrix: ID • ':' MATRIX ASSIGN expr
   32            | ID • ':' MATRIX '[' expr ']' ASSIGN expr
   33            | ID • matrix_twod ASSIGN expr
   34            | ID • matrix_acess ASSIGN expr
   62 exp: ID •
   66    | ID • dms_acess
   67    | ID • '[' expr ':' expr ']'
   68    | ID • '(' args ')'
   71    | ID • INCREMENT
   72    | ID • DECREMENT
   73    | ID • matrix_twod
   74    | ID • matrix_acess

    ASSIGN            deslocar, e ir ao estado 45
    INCREMENT         deslocar, e ir ao estado 46
    DECREMENT         deslocar, e ir ao estado 47
    INCREMENT_ASSIGN  deslocar, e ir ao estado 48
    DECREMENT_ASSIGN  deslocar, e ir ao estado 49
    '('               deslocar, e ir ao estado 50
    ':'               deslocar, e ir ao estado 51
    '['               deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 62 (exp)

    matrix_twod   ir ao estado 53
    matrix_acess  ir ao estado 54
    dms_acess     ir ao estado 55


Estado 27

   63 exp: NUMBER •

    $padrão  reduzir usando a regra 63 (exp)


Estado 28

   64 exp: FLOAT •

    $padrão  reduzir usando a regra 64 (exp)


Estado 29

   65 exp: STRING •

    $padrão  reduzir usando a regra 65 (exp)


Estado 30

   21 stmt: IF • condition block
   22     | IF • condition block ELSE block

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    NOT     deslocar, e ir ao estado 57
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms        ir ao estado 40
    condition  ir ao estado 58
    expr       ir ao estado 59
    term       ir ao estado 42
    factor     ir ao estado 43
    exp        ir ao estado 44


Estado 31

   23 stmt: WHILE • condition block

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    NOT     deslocar, e ir ao estado 57
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms        ir ao estado 40
    condition  ir ao estado 60
    expr       ir ao estado 59
    term       ir ao estado 42
    factor     ir ao estado 43
    exp        ir ao estado 44


Estado 32

   24 stmt: FOR • ID IN ID block

    ID  deslocar, e ir ao estado 61


Estado 33

   60 exp: '(' • expr ')'

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    expr    ir ao estado 62
    term    ir ao estado 42
    factor  ir ao estado 43
    exp     ir ao estado 44


Estado 34

   41 dms: '[' • ']'
   42    | '[' • ']' dms
   69 exp: '[' • expr_list ']'

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    ']'     deslocar, e ir ao estado 22
    '-'     deslocar, e ir ao estado 35

    dms        ir ao estado 40
    expr       ir ao estado 63
    term       ir ao estado 42
    factor     ir ao estado 43
    exp        ir ao estado 44
    expr_list  ir ao estado 64


Estado 35

   61 exp: '-' • expr

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    expr    ir ao estado 65
    term    ir ao estado 42
    factor  ir ao estado 43
    exp     ir ao estado 44


Estado 36

   12 block: '{' stmts_list • '}'

    '}'  deslocar, e ir ao estado 66


Estado 37

   13 stmts_list: stmt • ';'
   14           | stmt • ';' stmts_list

    ';'  deslocar, e ir ao estado 67


Estado 38

   25 stmt: stmt_array •

    $padrão  reduzir usando a regra 25 (stmt)


Estado 39

   26 stmt: stmt_matrix •

    $padrão  reduzir usando a regra 26 (stmt)


Estado 40

   70 exp: dms •

    $padrão  reduzir usando a regra 70 (exp)


Estado 41

   27 stmt: expr •
   52 expr: expr • PLUS term
   53     | expr • MINUS term

    PLUS   deslocar, e ir ao estado 68
    MINUS  deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 27 (stmt)


Estado 42

   54 expr: term •
   55 term: term • MULT factor
   56     | term • DIVISION factor

    MULT      deslocar, e ir ao estado 70
    DIVISION  deslocar, e ir ao estado 71

    MULT      [reduzir usando a regra 54 (expr)]
    DIVISION  [reduzir usando a regra 54 (expr)]
    $padrão   reduzir usando a regra 54 (expr)


Estado 43

   57 term: factor •

    $padrão  reduzir usando a regra 57 (term)


Estado 44

   58 factor: exp • EXPOENT factor
   59       | exp •

    EXPOENT  deslocar, e ir ao estado 72

    EXPOENT  [reduzir usando a regra 59 (factor)]
    $padrão  reduzir usando a regra 59 (factor)


Estado 45

   15 stmt: ID ASSIGN • expr
   17     | ID ASSIGN • '(' expr ')'

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 73
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    expr    ir ao estado 74
    term    ir ao estado 42
    factor  ir ao estado 43
    exp     ir ao estado 44


Estado 46

   71 exp: ID INCREMENT •

    $padrão  reduzir usando a regra 71 (exp)


Estado 47

   72 exp: ID DECREMENT •

    $padrão  reduzir usando a regra 72 (exp)


Estado 48

   18 stmt: ID INCREMENT_ASSIGN • expr

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    expr    ir ao estado 75
    term    ir ao estado 42
    factor  ir ao estado 43
    exp     ir ao estado 44


Estado 49

   19 stmt: ID DECREMENT_ASSIGN • expr

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    expr    ir ao estado 76
    term    ir ao estado 42
    factor  ir ao estado 43
    exp     ir ao estado 44


Estado 50

   68 exp: ID '(' • args ')'

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 77 (args)

    dms     ir ao estado 40
    expr    ir ao estado 77
    term    ir ao estado 42
    factor  ir ao estado 43
    exp     ir ao estado 44
    args    ir ao estado 78


Estado 51

   16 stmt: ID ':' • TYPE ASSIGN expr
   29 stmt_array: ID ':' • TYPE dms ASSIGN expr
   31 stmt_matrix: ID ':' • MATRIX ASSIGN expr
   32            | ID ':' • MATRIX '[' expr ']' ASSIGN expr

    TYPE    deslocar, e ir ao estado 79
    MATRIX  deslocar, e ir ao estado 80


Estado 52

   20 stmt: ID '[' • expr ':' expr ']' ASSIGN expr
   28 stmt_array: ID '[' • expr ':' expr ']' ASSIGN expr
   35 matrix_twod: '[' • expr ']' '[' ']'
   36            | '[' • ']' '[' expr ']'
   37 matrix_acess: '[' • expr ']' '[' expr ']'
   38             | '[' • expr ']' '[' expr ']' dms_acess
   39 dms_acess: '[' • expr ']'
   40          | '[' • expr ']' dms_acess
   67 exp: ID '[' • expr ':' expr ']'

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    ']'     deslocar, e ir ao estado 81
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    expr    ir ao estado 82
    term    ir ao estado 42
    factor  ir ao estado 43
    exp     ir ao estado 44


Estado 53

   33 stmt_matrix: ID matrix_twod • ASSIGN expr
   73 exp: ID matrix_twod •

    ASSIGN  deslocar, e ir ao estado 83

    $padrão  reduzir usando a regra 73 (exp)


Estado 54

   34 stmt_matrix: ID matrix_acess • ASSIGN expr
   74 exp: ID matrix_acess •

    ASSIGN  deslocar, e ir ao estado 84

    $padrão  reduzir usando a regra 74 (exp)


Estado 55

   30 stmt_array: ID dms_acess • ASSIGN expr
   66 exp: ID dms_acess •

    ASSIGN  deslocar, e ir ao estado 85

    $padrão  reduzir usando a regra 66 (exp)


Estado 56

   62 exp: ID •
   66    | ID • dms_acess
   67    | ID • '[' expr ':' expr ']'
   68    | ID • '(' args ')'
   71    | ID • INCREMENT
   72    | ID • DECREMENT
   73    | ID • matrix_twod
   74    | ID • matrix_acess

    INCREMENT  deslocar, e ir ao estado 46
    DECREMENT  deslocar, e ir ao estado 47
    '('        deslocar, e ir ao estado 50
    '['        deslocar, e ir ao estado 86

    $padrão  reduzir usando a regra 62 (exp)

    matrix_twod   ir ao estado 87
    matrix_acess  ir ao estado 88
    dms_acess     ir ao estado 89


Estado 57

   49 condition: NOT • condition

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    NOT     deslocar, e ir ao estado 57
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms        ir ao estado 40
    condition  ir ao estado 90
    expr       ir ao estado 59
    term       ir ao estado 42
    factor     ir ao estado 43
    exp        ir ao estado 44


Estado 58

   21 stmt: IF condition • block
   22     | IF condition • block ELSE block
   50 condition: condition • AND condition
   51          | condition • OR condition

    AND  deslocar, e ir ao estado 91
    OR   deslocar, e ir ao estado 92
    '{'  deslocar, e ir ao estado 23

    block  ir ao estado 93


Estado 59

   43 condition: expr • LESS expr
   44          | expr • GREATER expr
   45          | expr • LESSEQUALS expr
   46          | expr • GREATEREQUALS expr
   47          | expr • EQUALS expr
   48          | expr • DIFF expr
   52 expr: expr • PLUS term
   53     | expr • MINUS term

    PLUS           deslocar, e ir ao estado 68
    MINUS          deslocar, e ir ao estado 69
    EQUALS         deslocar, e ir ao estado 94
    DIFF           deslocar, e ir ao estado 95
    LESS           deslocar, e ir ao estado 96
    GREATER        deslocar, e ir ao estado 97
    LESSEQUALS     deslocar, e ir ao estado 98
    GREATEREQUALS  deslocar, e ir ao estado 99


Estado 60

   23 stmt: WHILE condition • block
   50 condition: condition • AND condition
   51          | condition • OR condition

    AND  deslocar, e ir ao estado 91
    OR   deslocar, e ir ao estado 92
    '{'  deslocar, e ir ao estado 23

    block  ir ao estado 100


Estado 61

   24 stmt: FOR ID • IN ID block

    IN  deslocar, e ir ao estado 101


Estado 62

   52 expr: expr • PLUS term
   53     | expr • MINUS term
   60 exp: '(' expr • ')'

    PLUS   deslocar, e ir ao estado 68
    MINUS  deslocar, e ir ao estado 69
    ')'    deslocar, e ir ao estado 102


Estado 63

   52 expr: expr • PLUS term
   53     | expr • MINUS term
   75 expr_list: expr •
   76          | expr • ',' expr_list

    PLUS   deslocar, e ir ao estado 68
    MINUS  deslocar, e ir ao estado 69
    ','    deslocar, e ir ao estado 103

    $padrão  reduzir usando a regra 75 (expr_list)


Estado 64

   69 exp: '[' expr_list • ']'

    ']'  deslocar, e ir ao estado 104


Estado 65

   52 expr: expr • PLUS term
   53     | expr • MINUS term
   61 exp: '-' expr •

    PLUS   deslocar, e ir ao estado 68
    MINUS  deslocar, e ir ao estado 69

    PLUS     [reduzir usando a regra 61 (exp)]
    MINUS    [reduzir usando a regra 61 (exp)]
    $padrão  reduzir usando a regra 61 (exp)


Estado 66

   12 block: '{' stmts_list '}' •

    $padrão  reduzir usando a regra 12 (block)


Estado 67

   13 stmts_list: stmt ';' •
   14           | stmt ';' • stmts_list

    ID      deslocar, e ir ao estado 26
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    IF      deslocar, e ir ao estado 30
    WHILE   deslocar, e ir ao estado 31
    FOR     deslocar, e ir ao estado 32
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 13 (stmts_list)

    stmts_list   ir ao estado 105
    stmt         ir ao estado 37
    stmt_array   ir ao estado 38
    stmt_matrix  ir ao estado 39
    dms          ir ao estado 40
    expr         ir ao estado 41
    term         ir ao estado 42
    factor       ir ao estado 43
    exp          ir ao estado 44


Estado 68

   52 expr: expr PLUS • term

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    term    ir ao estado 106
    factor  ir ao estado 43
    exp     ir ao estado 44


Estado 69

   53 expr: expr MINUS • term

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    term    ir ao estado 107
    factor  ir ao estado 43
    exp     ir ao estado 44


Estado 70

   55 term: term MULT • factor

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    factor  ir ao estado 108
    exp     ir ao estado 44


Estado 71

   56 term: term DIVISION • factor

    ID      deslocar, e ir ao estado 56
    NUMBER  deslocar, e ir ao estado 27
    FLOAT   deslocar, e ir ao estado 28
    STRING  deslocar, e ir ao estado 29
    '('     deslocar, e ir ao estado 33
    '['     deslocar, e ir ao estado 34
    '-'     deslocar, e ir ao estado 35

    dms     ir ao estado 40
    factor  ir ao estado 109
    exp     ir ao estado 44


Estado 72

   58 factor: exp EXPOENT • factor
